feat: 新增通知系统、设置页面，修复多个Bug
- 新增通知系统：点赞/评论/关注/好友申请触发通知，铃铛下拉面板
- 新增设置页面：个人资料编辑、头像上传、密码修改
- 修复：管理页500错误、在线状态接口报错、铃铛红点逻辑
- 修复：在线状态闪烁、手机号校验、雪花ID重置为自增
- Layout优化：移除重复铃铛、轮询间隔缩短至5秒
- 数据库所有表AUTO_INCREMENT重置为100

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>